ia64: fix byteswap conversion warning

Same fix as went in for other architectures.

URL: http://sourceware.org/bugzilla/show_bug.cgi?id=12194
Signed-off-by: Mike Frysinger <vapier@gentoo.org>